--- a/ros2_listener_android/build.gradle
+++ b/ros2_listener_android/build.gradle
@@ -19,13 +19,14 @@ buildscript {
     jcenter()
     mavenCentral()
     mavenLocal()
+    google()
     maven {
       url "https://plugins.gradle.org/m2/"
     }
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.3'
+    classpath 'com.android.tools.build:gradle:3.1.0'
     classpath 'gradle.plugin.org.ros2.tools.gradle:ament:0.7.0'
     classpath 'me.tatarka:gradle-retrolambda:3.6.1'
   }
@@ -33,4 +34,6 @@ buildscript {
 
 repositories {
    mavenCentral()
+   google()
+   jcenter()
 }
